2009-02-01 09:20-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormBoxEditor.m
	* GormCore/GormInternalViewEditor.m
	* GormCore/GormViewWithSubviewsEditor.m: Changes to support
	standalone views.

2009-01-31 18:45-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormCustomView.m: Allow addition of plain NSView to
	a gorm file.

2009-01-25 09:47-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormViewWindow.m: Change the color used for standalone
	views.

2009-01-25 07:54-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/0Menus/GormNSMenu.m: Fix memory leak.

2009-01-25 07:00-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormFilePrefsManager.m
	* GormInfo.plist: Change version to 1.2.9 (SVN) unstable.

2009-01-25 06:50-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/0Menus/GormMenuEditor.m: Display the in certain situations.
	* Palettes/0Menus/GormNSMenu.m: Remove call to setMenu: in 
	_createWindow since it's not needed and was causing display issues.
	* Palettes/0Menus/GormNSMenuView.m: Use new method in NSMenuView
	to reduce code duplication.  Corrections for bug #25401.

2009-01-06 20:48-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Resources/ClassInformation.plist: Added printDocument: method
	to FirstResponder

2009-01-06  Fred Kiefer <FredKiefer@gmx.de>

	* GormCore/GormClassManager.m (-nibData): Make sure an action name
	of ":" gets ignored.

2008-12-26 13:53-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Version: 1.2.8

2008-12-26 13:53-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* ANNOUNCE
	* Documentation/news.texi
	* GormCore/GormFilePrefsManager.m
	* GormInfo.plist
	* NEWS: Update with new version information.

2008-12-19  Nicola Pero <nicola.pero@meta-innovation.com>

	* All GNUmakefiles: removed GNUSTEP_CORE_SOFTWARE=YES and
	added PACKAGE_NAME=gorm.